@@ -1,3 +1,10 @@
+2008-12-07 arne
+
+	* fixes to cocoa tooltip implementation
+	* the platform implementation should call frame->onMouseExited() when the mouse leaves the platform view/window
+	* added onMouseDown(..) to IMouseObserver
+	* fix warnings when building with gcc4.2
+
 2008-12-06 arne
 
 	* cocoa tooltip implementation
